feat: adding partner code & description